root pom - last modifications so that mvn site works